--- a/Assignments/HTML/Core HTML/index.html
+++ b/Assignments/HTML/Core HTML/index.html
@@ -1,1 +1,19 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Webpage</title>
+</head>
+<body>
+    <p><b>This text will be bolded</b></p>
+    <p><i>This text will be italic</i></h1></p>
+    <p><u>This text will be underlined</u></h1></p>
+    <p><mark>This text will be highlighted</mark></h1></p>
+    <p>This is normal text <sup>This will be super scripted</sup>This is normal again</h1></p>
+    <p>This is normal text <sub>This text will be subscripted</sub></h1></p>
+    <p>Normal Text <small>Small Text</small></h1></p>
+    <p><strike>This text will be deleted</strike></h1></p>
+</body>
+</html>
