--- a/Assignments/HTML/Core HTML/index6.html
+++ b/Assignments/HTML/Core HTML/index6.html
@@ -1,1 +1,68 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <style>
+      table,
+      th,
+      td {
+        border: 1px solid black;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>1. HTML</h1>
+    <table>
+      <tr>
+        <th>Primary Use Cases</th>
+        <th>Key Features/Benefits</th>
+      </tr>
+      <tr>
+        <td>Building the Structure of web pages</td>
+        <td>
+          <ul>
+            <li>Simple and easy to learn</li>
+            <li>Compatible with all web browsers</li>
+            <li>Allows for semantic markuup</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+    <h1>2. CSS</h1>
+    <table>
+        <tr>
+            <th>Primary Use Cases</th>
+            <th>Key Features/Benefits</th>
+          </tr>
+      <tr>
+        <td>Control the presentation and styling of web content</td>
+        <td>
+          <ul>
+            <li>Allows us to style the webpages</li>
+            <li>Greater Accessibility</li>
+            <li>Animations and Transitions</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+    <h1>3. JS</h1>
+    <table>
+        <tr>
+            <th>Primary Use Cases</th>
+            <th>Key Features/Benefits</th>
+          </tr>
+      <tr>
+        <td>Enhance the interactivity and functionality of web pages.</td>
+        <td>
+          <ul>
+            <li>Client-Side Scripting</li>
+            <li>DOM Manipulatio</li>
+            <li>Single Page Applications (SPAs)</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+  </body>
+</html>
